// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box test should match last snapshot with a title 1`] = `
.c0 {
  border-radius: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0 > * {
  padding: 0.5rem 1rem;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  background-color: #A42824;
  width: 100%;
  border-radius: 10px 10px 0 0;
}

.c1 > h4 {
  margin: 0;
  color: #FFFFFF;
  font-size: 1.2rem;
}

.c2 {
  background-color: #FFFFFF;
  border-radius: 0 0 10px 10px;
  border: 1px solid #A42824;
}

<Box
  onClick={[MockFunction]}
  title="Title"
>
  <StyledBox
    onClick={[MockFunction]}
  >
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Box__StyledBox-sc-1hhoqar-0",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "border-radius:10px;display:flex;flex-direction:column;justify-content:flex-start;> *{padding:0.5rem 1rem;}",
              [Function],
            ],
          },
          "displayName": "StyledBox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Box__StyledBox-sc-1hhoqar-0",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      onClick={[MockFunction]}
    >
      <div
        className="c0"
        onClick={[MockFunction]}
      >
        <Title
          theme={
            Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            }
          }
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "_foldedDefaultProps": Object {
                  "theme": Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  },
                },
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Box__Title-sc-1hhoqar-1",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "background-color:",
                    [Function],
                    ";width:100%;border-radius:10px 10px 0 0;> h4{margin:0;color:",
                    [Function],
                    ";font-size:1.2rem;}",
                  ],
                },
                "displayName": "Title",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Box__Title-sc-1hhoqar-1",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <div
              className="c1"
            >
              <h4>
                Title
              </h4>
            </div>
          </StyledComponent>
        </Title>
        <Body
          flatTop={true}
          theme={
            Object {
              "action": Object {
                "dark": Object {
                  "RGB": "79,38,98",
                  "hex": "#4E2662",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "173,101,207",
                  "hex": "#AD65CF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "116,60,143",
                  "hex": "#743C8F",
                  "on": "#FFFFFF",
                },
              },
              "background": Object {
                "RGB": "246,246,246",
                "hex": "#F6F6F6",
              },
              "black": Object {
                "main": Object {
                  "RGB": "39,39,39",
                  "hex": "#272727",
                  "on": "#FFFFFF",
                },
                "tint20": Object {
                  "RGB": "236,236,236",
                  "hex": "#ECECEC",
                  "on": "#272727",
                },
                "tint40": Object {
                  "RGB": "199,199,199",
                  "hex": "#C7C7C7",
                  "on": "#272727",
                },
                "tint60": Object {
                  "RGB": "160,160,160",
                  "hex": "#A0A0A0",
                  "on": "#FFFFFF",
                },
                "tint80": Object {
                  "RGB": "105,105,105",
                  "hex": "#696969",
                  "on": "#FFFFFF",
                },
              },
              "complimentary": Object {
                "dark": Object {
                  "RGB": "206,185,0",
                  "hex": "#CEB900",
                  "on": "#272727",
                },
                "light": Object {
                  "RGB": "255,245,157",
                  "hex": "#FFF59D",
                  "on": "#272727",
                },
                "main": Object {
                  "RGB": "255,238,82",
                  "hex": "#FFEE52",
                  "on": "#272727",
                },
              },
              "error": Object {
                "dark": Object {
                  "RGB": "197,73,1",
                  "hex": "#C54901",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "255,115,32",
                  "hex": "#FF7320",
                  "on": "#FFFFFF",
                },
              },
              "primary": Object {
                "dark": Object {
                  "RGB": "102,22,20",
                  "hex": "#661614",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "218,52,47",
                  "hex": "#DA342F",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "164,40,36",
                  "hex": "#A42824",
                  "on": "#FFFFFF",
                },
              },
              "secondary": Object {
                "dark": Object {
                  "RGB": "5,38,59",
                  "hex": "#05263B",
                  "on": "#FFFFFF",
                },
                "light": Object {
                  "RGB": "89,156,175",
                  "hex": "#599CAF",
                  "on": "#FFFFFF",
                },
                "main": Object {
                  "RGB": "11,70,107",
                  "hex": "#0B466B",
                  "on": "#FFFFFF",
                },
              },
              "surface": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
              "white": Object {
                "RGB": "255,255,255",
                "hex": "#FFFFFF",
                "on": "#272727",
              },
            }
          }
        >
          <StyledComponent
            flatTop={true}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "_foldedDefaultProps": Object {
                  "theme": Object {
                    "action": Object {
                      "dark": Object {
                        "RGB": "79,38,98",
                        "hex": "#4E2662",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "173,101,207",
                        "hex": "#AD65CF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "116,60,143",
                        "hex": "#743C8F",
                        "on": "#FFFFFF",
                      },
                    },
                    "background": Object {
                      "RGB": "246,246,246",
                      "hex": "#F6F6F6",
                    },
                    "black": Object {
                      "main": Object {
                        "RGB": "39,39,39",
                        "hex": "#272727",
                        "on": "#FFFFFF",
                      },
                      "tint20": Object {
                        "RGB": "236,236,236",
                        "hex": "#ECECEC",
                        "on": "#272727",
                      },
                      "tint40": Object {
                        "RGB": "199,199,199",
                        "hex": "#C7C7C7",
                        "on": "#272727",
                      },
                      "tint60": Object {
                        "RGB": "160,160,160",
                        "hex": "#A0A0A0",
                        "on": "#FFFFFF",
                      },
                      "tint80": Object {
                        "RGB": "105,105,105",
                        "hex": "#696969",
                        "on": "#FFFFFF",
                      },
                    },
                    "complimentary": Object {
                      "dark": Object {
                        "RGB": "206,185,0",
                        "hex": "#CEB900",
                        "on": "#272727",
                      },
                      "light": Object {
                        "RGB": "255,245,157",
                        "hex": "#FFF59D",
                        "on": "#272727",
                      },
                      "main": Object {
                        "RGB": "255,238,82",
                        "hex": "#FFEE52",
                        "on": "#272727",
                      },
                    },
                    "error": Object {
                      "dark": Object {
                        "RGB": "197,73,1",
                        "hex": "#C54901",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "255,115,32",
                        "hex": "#FF7320",
                        "on": "#FFFFFF",
                      },
                    },
                    "primary": Object {
                      "dark": Object {
                        "RGB": "102,22,20",
                        "hex": "#661614",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "218,52,47",
                        "hex": "#DA342F",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "164,40,36",
                        "hex": "#A42824",
                        "on": "#FFFFFF",
                      },
                    },
                    "secondary": Object {
                      "dark": Object {
                        "RGB": "5,38,59",
                        "hex": "#05263B",
                        "on": "#FFFFFF",
                      },
                      "light": Object {
                        "RGB": "89,156,175",
                        "hex": "#599CAF",
                        "on": "#FFFFFF",
                      },
                      "main": Object {
                        "RGB": "11,70,107",
                        "hex": "#0B466B",
                        "on": "#FFFFFF",
                      },
                    },
                    "surface": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                    "white": Object {
                      "RGB": "255,255,255",
                      "hex": "#FFFFFF",
                      "on": "#272727",
                    },
                  },
                },
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Box__Body-sc-1hhoqar-2",
                  "isStatic": false,
                  "lastClassName": "c2",
                  "rules": Array [
                    "background-color:",
                    [Function],
                    ";border-radius:",
                    [Function],
                    ";border:1px solid ",
                    [Function],
                    ";",
                  ],
                },
                "displayName": "Body",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "Box__Body-sc-1hhoqar-2",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            theme={
              Object {
                "action": Object {
                  "dark": Object {
                    "RGB": "79,38,98",
                    "hex": "#4E2662",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "173,101,207",
                    "hex": "#AD65CF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "116,60,143",
                    "hex": "#743C8F",
                    "on": "#FFFFFF",
                  },
                },
                "background": Object {
                  "RGB": "246,246,246",
                  "hex": "#F6F6F6",
                },
                "black": Object {
                  "main": Object {
                    "RGB": "39,39,39",
                    "hex": "#272727",
                    "on": "#FFFFFF",
                  },
                  "tint20": Object {
                    "RGB": "236,236,236",
                    "hex": "#ECECEC",
                    "on": "#272727",
                  },
                  "tint40": Object {
                    "RGB": "199,199,199",
                    "hex": "#C7C7C7",
                    "on": "#272727",
                  },
                  "tint60": Object {
                    "RGB": "160,160,160",
                    "hex": "#A0A0A0",
                    "on": "#FFFFFF",
                  },
                  "tint80": Object {
                    "RGB": "105,105,105",
                    "hex": "#696969",
                    "on": "#FFFFFF",
                  },
                },
                "complimentary": Object {
                  "dark": Object {
                    "RGB": "206,185,0",
                    "hex": "#CEB900",
                    "on": "#272727",
                  },
                  "light": Object {
                    "RGB": "255,245,157",
                    "hex": "#FFF59D",
                    "on": "#272727",
                  },
                  "main": Object {
                    "RGB": "255,238,82",
                    "hex": "#FFEE52",
                    "on": "#272727",
                  },
                },
                "error": Object {
                  "dark": Object {
                    "RGB": "197,73,1",
                    "hex": "#C54901",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "255,115,32",
                    "hex": "#FF7320",
                    "on": "#FFFFFF",
                  },
                },
                "primary": Object {
                  "dark": Object {
                    "RGB": "102,22,20",
                    "hex": "#661614",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "218,52,47",
                    "hex": "#DA342F",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "164,40,36",
                    "hex": "#A42824",
                    "on": "#FFFFFF",
                  },
                },
                "secondary": Object {
                  "dark": Object {
                    "RGB": "5,38,59",
                    "hex": "#05263B",
                    "on": "#FFFFFF",
                  },
                  "light": Object {
                    "RGB": "89,156,175",
                    "hex": "#599CAF",
                    "on": "#FFFFFF",
                  },
                  "main": Object {
                    "RGB": "11,70,107",
                    "hex": "#0B466B",
                    "on": "#FFFFFF",
                  },
                },
                "surface": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
                "white": Object {
                  "RGB": "255,255,255",
                  "hex": "#FFFFFF",
                  "on": "#272727",
                },
              }
            }
          >
            <div
              className="c2"
            >
              <span />
            </div>
          </StyledComponent>
        </Body>
      </div>
    </StyledComponent>
  </StyledBox>
</Box>
`;

exports[`Box test should match last snapshot without a title 1`] = `
<StyledBox
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <Body
    flatTop={false}
    theme={
      Object {
        "action": Object {
          "dark": Object {
            "RGB": "79,38,98",
            "hex": "#4E2662",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "173,101,207",
            "hex": "#AD65CF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "116,60,143",
            "hex": "#743C8F",
            "on": "#FFFFFF",
          },
        },
        "background": Object {
          "RGB": "246,246,246",
          "hex": "#F6F6F6",
        },
        "black": Object {
          "main": Object {
            "RGB": "39,39,39",
            "hex": "#272727",
            "on": "#FFFFFF",
          },
          "tint20": Object {
            "RGB": "236,236,236",
            "hex": "#ECECEC",
            "on": "#272727",
          },
          "tint40": Object {
            "RGB": "199,199,199",
            "hex": "#C7C7C7",
            "on": "#272727",
          },
          "tint60": Object {
            "RGB": "160,160,160",
            "hex": "#A0A0A0",
            "on": "#FFFFFF",
          },
          "tint80": Object {
            "RGB": "105,105,105",
            "hex": "#696969",
            "on": "#FFFFFF",
          },
        },
        "complimentary": Object {
          "dark": Object {
            "RGB": "206,185,0",
            "hex": "#CEB900",
            "on": "#272727",
          },
          "light": Object {
            "RGB": "255,245,157",
            "hex": "#FFF59D",
            "on": "#272727",
          },
          "main": Object {
            "RGB": "255,238,82",
            "hex": "#FFEE52",
            "on": "#272727",
          },
        },
        "error": Object {
          "dark": Object {
            "RGB": "197,73,1",
            "hex": "#C54901",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "255,115,32",
            "hex": "#FF7320",
            "on": "#FFFFFF",
          },
        },
        "primary": Object {
          "dark": Object {
            "RGB": "102,22,20",
            "hex": "#661614",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "218,52,47",
            "hex": "#DA342F",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "164,40,36",
            "hex": "#A42824",
            "on": "#FFFFFF",
          },
        },
        "secondary": Object {
          "dark": Object {
            "RGB": "5,38,59",
            "hex": "#05263B",
            "on": "#FFFFFF",
          },
          "light": Object {
            "RGB": "89,156,175",
            "hex": "#599CAF",
            "on": "#FFFFFF",
          },
          "main": Object {
            "RGB": "11,70,107",
            "hex": "#0B466B",
            "on": "#FFFFFF",
          },
        },
        "surface": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
        "white": Object {
          "RGB": "255,255,255",
          "hex": "#FFFFFF",
          "on": "#272727",
        },
      }
    }
  >
    <span>
      heleo
    </span>
  </Body>
</StyledBox>
`;
